# pic-nix-shock

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .shock.env.example  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample.ipynb  sample_reduce1d.ipynb
.github/: labeler.yml
.github/workflows/: ci.yml  label.yml
.opencode/: opencode.jsonc
.opencode/skills/: marimo-notebook.md
docs/: api.md  installation.md  wavefit-interactive-tuning.md  wavefit.md  wavetool.md
notebooks/: wavefit-statistics.py
sample/: reduce1d-config.toml  slurm-reduce1d.sh  slurm-wavetool.sh  waveactivity-config.toml  wavefilter-config.toml  wavefit-config.toml  wavetool-config.toml
scripts/: benchmark_ohm_solver.py  mpi-wavefit.sh  setup.sh  test-mpi.sh
shock/: __init__.py  base.py  make_tracer_hdf5.py  mra.py  ohm.py  printparam.py  reduce1d.py  summary.py  utils.py  vdist.py  waveactivity.py  wavefilter.py  wavefit.py  wavefit_candidates.py  wavefit_fit.py  wavefit_model.py  wavefit_plot.py  waveplot.py  wavetool.py
shock/wavefit/: __init__.py  __main__.py  analysis.py  candidates.py  cli.py  fit.py  io.py  model.py  plot.py
tests/: conftest.py  test_base.py  test_integration.py  test_ohm.py  test_smoke.py  test_utils.py  test_wavefilter_analyze.py  test_wavefit_modules.py  test_wavefit_real_fixture.py  test_wavetool_analyze.py
tests/fixtures/: README.md  minimal_config.toml
tests/fixtures/wavefit/: real_subset.npz  real_subset_metadata.json
