[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shock"
version = "0.1.0"
description = "Analysis Tools for PIC Simulations of Collisionless Shocks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "lmfit>=1.2",
    "matplotlib>=3.4",
    "h5py>=3.0",
    "toml>=0.10",
    "msgpack>=1.0",
    "tqdm>=4.60",
    "PyWavelets>=1.1",
    "watchdog>=4.0.2",
    "nest-asyncio>=1.6.0",
    "aiofiles>=24.1.0",
    "jupyter>=1.0",
    "pytest>=7.0",
    "ruff>=0.1.0",
    "pandas>=2.0",
    "marimo",
]

[project.optional-dependencies]
mpi = ["mpi4py>=3.0"]

[project.scripts]
reduce1d = "shock.reduce1d:main"
wavetool = "shock.wavetool:main"
mra = "shock.mra:main"
wavefilter = "shock.wavefilter:main"
wavefit = "shock.wavefit:main"
vdist = "shock.vdist:main"
printparam = "shock.printparam:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shock*"]
exclude = ["data*", "work*", ".*"]

[tool.ruff]
line-length = 100
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E712", "E721", "E731", "E741", "F841"]
